<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Mulch_type"
        android:layout_width="408dp"
        android:layout_height="40dp"
        android:text="@string/select_mulch_type"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.018"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01" />

    <RadioGroup
        android:id="@+id/Mulch_option"
        android:layout_width="404dp"
        android:layout_height="576dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="48dp"
        android:checkedButton="@id/option_Premium"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/option_Premium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/premium_dark_mulch" />

        <TextView
            android:id="@+id/premiumPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/option_Premium"
            android:text="$56/cubic yard" />

        <RadioButton
            android:id="@+id/option_Special"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/special_blend" />

        <TextView
            android:id="@+id/SpecialPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/option_Special"
            android:text="$35/cubic yard" />

        <RadioButton
            android:id="@+id/option_Triple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/triple_ground" />

        <TextView
            android:id="@+id/triplePrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/triplePrice"
            android:text="$40/cubic yard" />

        <RadioButton

            android:id="@+id/option_Chocolate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chocolate_dyed" />

        <TextView
            android:id="@+id/chocolatePrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/option_Chocolate"
            android:text="$56/cubic yard" />

        <RadioButton
            android:id="@+id/option_Red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/red_dyed" />

        <TextView
            android:id="@+id/redPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/option_Red"
            android:text="$38/cubic yard" />

        <RadioButton
            android:id="@+id/option_Black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/black_dyed" />

        <TextView
            android:id="@+id/blackPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/option_Black"
            android:text="$38/cubic yard"
            />

        <RadioButton
            android:id="@+id/option_Play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play_mat" />

        <TextView
            android:id="@+id/playPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/option_Play"
            android:text="$38/cubic yard" />

        <RadioButton
            android:id="@+id/option_Cedar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cedar" />

        <TextView
            android:id="@+id/cedarPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/option_Cedar"
            android:text="$38/cubic yard" />

    </RadioGroup>

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Mulch_option" />

</androidx.constraintlayout.widget.ConstraintLayout>